--- a/QuizApp-Instructor/pubspec.yaml
+++ b/QuizApp-Instructor/pubspec.yaml
@@ -35,11 +35,12 @@ dependencies:
   english_words: ^4.0.0
   provider: ^6.0.0
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   auto_size_text: ^3.0.0
+  timer_count_down: ^2.2.2
+  slide_countdown: ^1.5.2
 
 dev_dependencies:
   flutter_test:
