--- a/Quiz-App-bluetooth/pubspec.yaml
+++ b/Quiz-App-bluetooth/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
   flutter:
     sdk: flutter
 
-  flutter_blue_plus:
+  flutter_blue_plus: ^1.31.16
   get:
   permission_handler:
 
