--- a/QuizApp-Instructor/pubspec.yaml
+++ b/QuizApp-Instructor/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
 
-    # Delete these after
+  # Delete these after
   english_words: ^4.0.0
   provider: ^6.0.0
 
@@ -42,6 +42,8 @@ dependencies:
   slide_countdown: ^1.5.2
   path_provider: ^2.1.2
   flutter_blue_plus: ^1.31.16
+
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
