--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,16 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+
+	<key>NSBluetoothAlwaysUsageDescription</key>
+	<string>Our application uses Bluetooth to find, connect, and transfer data between different devices.</string>
+	<key>NSBluetoothPeripheralUsageDescription</key>
+	<string>Our application uses Bluetooth to find, connect, and transfer data between different devices.</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>bluetooth-central</string>
+		<string>bluetooth-peripheral</string>
+	</array>
+
 </dict>
 </plist>
