--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   shared_preferences: ^2.2.2
   provider: ^6.1.2
   permission_handler: ^11.3.1
+  flutter_isolate: ^2.0.4
 
 dev_dependencies:
   flutter_test:
