--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
     <uses-permission android:name="android.permission.BLUETOOTH"/>
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/> 
 
     <!-- If targeting Android 10 (API level 29) or higher, consider the ACCESS_BACKGROUND_LOCATION permission for background scanning -->
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/>
@@ -9,7 +10,7 @@
     <!-- For Android 12 (API level 31) and higher, specify BLUETOOTH_SCAN and BLUETOOTH_CONNECT instead of the broad location permissions -->
     <uses-permission android:name="android.permission.BLUETOOTH_SCAN" />
     <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
-    
+
     <application
         android:label="quiz_app"
         android:name="${applicationName}"
