--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   provider: ^6.1.2
   permission_handler: ^11.3.1
   flutter_isolate: ^2.0.4
+  window_manager: ^0.3.8
 
 dev_dependencies:
   flutter_test:
