--- a/QuizApp-Instructor/pubspec.yaml
+++ b/QuizApp-Instructor/pubspec.yaml
@@ -31,9 +31,10 @@ dependencies:
   flutter:
     sdk: flutter
 
-  # Delete these after
-  english_words: ^4.0.0
   provider: ^6.0.0
+  
+  # Delete these after
+  # english_words: ^4.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -42,7 +43,6 @@ dependencies:
   slide_countdown: ^1.5.2
   path_provider: ^2.0.0
   flutter_blue_plus: ^1.32.1
-
   shared_preferences: ^2.2.2
   quick_blue: ^0.5.0-dev.2
 
@@ -69,9 +69,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - images/UH_Manoa_ICS_Logo.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
