--- a/QuizApp-Instructor/pubspec.yaml
+++ b/QuizApp-Instructor/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
 
   shared_preferences: ^2.2.2
   quick_blue: ^0.5.0-dev.2
+  ble_peripheral: ^2.2.3
 
 dev_dependencies:
   flutter_test:
