--- a/QuizApp-Instructor/pubspec.yaml
+++ b/QuizApp-Instructor/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_blue_plus: ^1.32.1
   shared_preferences: ^2.2.2
   quick_blue: ^0.5.0-dev.2
+  window_manager: ^0.3.8
 
 dev_dependencies:
   flutter_test:
