--- a/QuizApp-Instructor/ios/Runner/Info.plist
+++ b/QuizApp-Instructor/ios/Runner/Info.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>NSBluetoothAlwaysUsageDescription</key>
-    <string>This app always needs Bluetooth to function</string>
-    <key>NSBluetoothPeripheralUsageDescription</key>
-    <string>This app needs Bluetooth Peripheral to function</string>
+	<string>We use Bluetooth to show basic communication between Central and Peripheral</string>
+	<key>NSBluetoothPeripheralUsageDescription</key>
+	<string>We use Bluetooth to show basic communication between Central and Peripheral</string>
     <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
     <string>This app always needs location and when in use to function</string>
     <key>NSLocationAlwaysUsageDescription</key>
