--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   permission_handler: ^11.3.1
   flutter_isolate: ^2.0.4
   window_manager: ^0.3.8
+  flutter_ble_peripheral_central: ^0.0.5
 
 dev_dependencies:
   flutter_test:
