--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   quick_blue: ^0.5.0-dev.2
   ble_peripheral: ^2.2.3
   flutter_ble_peripheral_central: ^0.0.5
+  network_info_plus: ^2.1.2
 
 dev_dependencies:
   flutter_test:
