--- a/QuizApp-Instructor/pubspec.yaml
+++ b/QuizApp-Instructor/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   shared_preferences: ^2.2.2
   quick_blue: ^0.5.0-dev.2
   ble_peripheral: ^2.2.3
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
