ios & macos permission

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -26,28 +26,32 @@
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
-	
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 	<key>NSBluetoothAlwaysUsageDescription</key>
 	<string>This app always needs Bluetooth to function</string>
 	<key>NSBluetoothPeripheralUsageDescription</key>
 	<string>This app needs Bluetooth Peripheral to function</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Access camera</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
 	<string>This app always needs location and when in use to function</string>
 	<key>NSLocationAlwaysUsageDescription</key>
 	<string>This app always needs location to function</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>This app needs location when in use to function</string>
-	<key>NSCameraUsageDescription</key>
-	<string>Access camera</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Library</string>
-
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>bluetooth-central</string>
 		<string>bluetooth-peripheral</string>
+		<string>location</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
