--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   permission_handler: ^11.3.1
   flutter_isolate: ^2.0.4
   network_info_plus: ^2.1.2
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
