--- a/QuizApp-Instructor/pubspec.yaml
+++ b/QuizApp-Instructor/pubspec.yaml
@@ -42,11 +42,8 @@ dependencies:
   auto_size_text: ^3.0.0
   slide_countdown: ^1.5.2
   path_provider: ^2.0.0
-  #flutter_blue_plus: ^1.32.1
   shared_preferences: ^2.2.2
-  #quick_blue: ^0.5.0-dev.2
   window_manager: ^0.3.8
-  #ble_peripheral: ^2.2.3
   intl: ^0.19.0
   file_picker: ^8.0.0+1
 
@@ -74,6 +71,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - images/quiz_app_logo.png
     - images/UH_Manoa_ICS_Logo.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
