--- a/QuizApp-Instructor/pubspec.yaml
+++ b/QuizApp-Instructor/pubspec.yaml
@@ -72,7 +72,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - images/quiz_app_logo.png
-    - images/UH_Manoa_ICS_Logo.jpg
+    - images/UH_Manoa_ICS_Logo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
