--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/quiz_app_logo.png
+    - assets/images/UH_Manoa_ICS_logo.png
 
 
   # To add assets to your application, add an assets section, like this:
