--- a/QuizApp-Instructor/pubspec.yaml
+++ b/QuizApp-Instructor/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   window_manager: ^0.3.8
   intl: ^0.19.0
   file_picker: ^8.0.0+1
+  geolocator: ^11.0.0
 
 dev_dependencies:
   flutter_test:
