--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_isolate: ^2.0.4
   network_info_plus: ^5.0.3
   intl: ^0.19.0
+  geolocator: ^11.0.0
 
 dev_dependencies:
   flutter_test:
